Compiler/tests/typing/bad/testfile-scope-2.rs

fn main() { let x = true; if x { let y = 42; } else { y; } }
